<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">
    <item
        android:id="@+id/action_filter_interval"
        android:title="@string/action_interval">

        <menu>
            <group
                android:id="@+id/action_geoup_filter_interval"

                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_filter_interval_week"
                    android:title="@string/action_filter_interval_week" />
                <item
                    android:id="@+id/action_filter_interval_month"
                    android:title="@string/action_filter_interval_month" />
                <item
                    android:id="@+id/action_filter_interval_year"
                    android:title="@string/action_filter_interval_year" />
            </group>

        </menu>
    </item>
    <item
        android:id="@+id/action_filter_account"
        android:title="@string/action_filter_account" >
        <menu>
            <group
                android:id="@+id/action_group_filter_account"
                android:checkableBehavior="single">
            </group>
        </menu>

    </item>

</menu>